@@ -29,75 +29,53 @@ val DEPENDENCY_BOMS = listOf(
   "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:${otelInstrumentationVersion}",
   "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha:${otelInstrumentationAlphaVersion}",
   "com.azure:azure-sdk-bom:1.2.5",
-  "org.junit:junit-bom:5.8.2"
+  "org.junit:junit-bom:5.8.2",
+  "org.testcontainers:testcontainers-bom:1.17.3",
 )
 
 // TODO consolidate to just one json library
 // TODO remove dependencies on apache commons
 
-val DEPENDENCY_SETS = listOf(
-  DependencySet(
-    "com.google.auto.value",
-    "1.9",
-    listOf("auto-value", "auto-value-annotations")
-  ),
-  DependencySet(
-    "com.google.errorprone",
-    "2.14.0",
-    listOf("error_prone_annotations", "error_prone_core")
-  ),
-  DependencySet(
-    "net.bytebuddy",
-    // When updating, also update buildSrc/build.gradle.kts
-    "1.12.10",
-    listOf("byte-buddy", "byte-buddy-dep", "byte-buddy-agent", "byte-buddy-gradle-plugin")
-  ),
-  DependencySet(
-    "org.mockito",
-    "4.6.1",
-    listOf("mockito-core", "mockito-junit-jupiter")
-  ),
-  DependencySet(
-    "org.slf4j",
-    // moving to 2.0 is problematic because the SPI mechanism doesn't work in the bootstrap class
-    // loader because while we add the agent jar to the bootstrap class loader via
-    // Instrumentation.appendToBootstrapClassLoaderSearch(), there's nothing similar for resources
-    // (which is a known problem in the java agent world) and so the META-INF/services resource is
-    // not found
-    "1.7.36",
-    listOf("slf4j-api", "slf4j-simple", "log4j-over-slf4j", "jcl-over-slf4j", "jul-to-slf4j")
-  ),
-  DependencySet(
-    "org.testcontainers",
-    "1.17.3",
-    listOf("testcontainers", "junit-jupiter")
-  ),
-  DependencySet(
-    "com.squareup.moshi",
-    "1.11.0", // 1.12.0 and above use okio 2.x which pulls in kotlin libs
-    listOf("moshi", "moshi-adapters")
-  ),
-  DependencySet(
-    "io.opentelemetry.javaagent",
-    otelInstrumentationAlphaVersion,
-    listOf(
-      "opentelemetry-javaagent-extension-api",
-      "opentelemetry-javaagent-bootstrap",
-      "opentelemetry-javaagent-tooling",
-      "opentelemetry-javaagent-extension-api")
-  ),
-  DependencySet(
-    "com.microsoft.azure",
-    "2.6.4", // need the latest version for Java 16+ support without having to use --illegal-access=permit
-    listOf(
-      "applicationinsights-core",
-      "applicationinsights-logging-log4j1_2",
-      "applicationinsights-logging-log4j2",
-      "applicationinsights-logging-logback",
-      "applicationinsights-web",
-      "applicationinsights-web-auto",
-      "applicationinsights-spring-boot-starter")
-  )
+val CORE_DEPENDENCIES = listOf(
+  "com.google.auto.service:auto-service:1.0.1",
+  "com.google.auto.service:auto-service-annotations:1.0.1",
+  "com.google.auto.value:auto-value:1.9",
+  "com.google.auto.value:auto-value-annotations:1.9",
+  "com.google.errorprone:error_prone_annotations:2.14.0",
+  "com.google.errorprone:error_prone_core:2.14.0",
+  // When updating, also update buildSrc/build.gradle.kts
+  "net.bytebuddy:byte-buddy:1.12.10",
+  "net.bytebuddy:byte-buddy-dep:1.12.10",
+  "net.bytebuddy:byte-buddy-agent:1.12.10",
+  "net.bytebuddy:byte-buddy-gradle-plugin:1.12.10",
+  "org.openjdk.jmh:jmh-core:1.35",
+  "org.openjdk.jmh:jmh-generator-bytecode:1.35",
+  "org.mockito:mockito-core:4.8.0",
+  "org.mockito:mockito-junit-jupiter:4.8.0",
+  "org.mockito:mockito-inline:4.8.0",
+  // moving to 2.0 is problematic because the SPI mechanism doesn't work in the bootstrap class
+  // loader because while we add the agent jar to the bootstrap class loader via
+  // Instrumentation.appendToBootstrapClassLoaderSearch(), there's nothing similar for resources
+  // (which is a known problem in the java agent world) and so the META-INF/services resource is
+  // not found
+  "org.slf4j:slf4j-api:1.7.36",
+  "org.slf4j:slf4j-simple:1.7.36",
+  "org.slf4j:log4j-over-slf4j:1.7.36",
+  "org.slf4j:jcl-over-slf4j:1.7.36",
+  "org.slf4j:jul-to-slf4j:1.7.36",
+  // 1.12.0 and above use okio 2.x which pulls in kotlin libs
+  "com.squareup.moshi:moshi:1.11.0",
+  "com.squareup.moshi:moshi-adapters:1.11.0",
+  "io.opentelemetry.javaagent:opentelemetry-javaagent-extension-api:otelInstrumentationAlphaVersion",
+  "io.opentelemetry.javaagent:opentelemetry-javaagent-bootstrap:otelInstrumentationAlphaVersion",
+  "io.opentelemetry.javaagent:opentelemetry-javaagent-tooling:otelInstrumentationAlphaVersion",
+  "com.microsoft.azure:applicationinsights-core:2.6.4",
+  "com.microsoft.azure:applicationinsights-logging-log4j1_2:2.6.4",
+  "com.microsoft.azure:applicationinsights-logging-log4j2:2.6.4",
+  "com.microsoft.azure:applicationinsights-logging-logback:2.6.4",
+  "com.microsoft.azure:applicationinsights-web:2.6.4",
+  "com.microsoft.azure:applicationinsights-web-auto:2.6.4",
+  "com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.4",
 )
 
 val DEPENDENCIES = listOf(
@@ -129,11 +107,10 @@ dependencies {
     dependencyVersions[split[0]] = split[2]
   }
   constraints {
-    for (set in DEPENDENCY_SETS) {
-      for (module in set.modules) {
-        api("${set.group}:${module}:${set.version}")
-        dependencyVersions[set.group] = set.version
-      }
+    for (dependency in CORE_DEPENDENCIES) {
+      api(dependency)
+      val split = dependency.split(':')
+      dependencyVersions[split[0]] = split[2]
     }
     for (dependency in DEPENDENCIES) {
       api(dependency)
